fix h1 on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,18 @@ body > div.fancybox-overlay.fancybox-overlay-fixed > div{
 
 }
 
+@media screen and (max-width: 400px){
+  h1{
+    font-size: 26px;
+  }
+}
+
+@media screen and (max-width: 341px){
+  h1{
+    font-size: 23px;
+  }
+}
+
 @media screen and (max-width: 967px){
   #tags{
     display: none;
